<resources>
    <string name="app_name">DraftApp</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="named">Named</string>
    <string name="checkbox">CheckBox</string>
    <string name="not_main_xml">This screen is described not in main.xml, but in myscreen.xml</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="type_here">Type here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_button_with_text">New button with text</string>
    <string name="hello_world">Hello, World!</string>
    <string name="easy_android">Android it\'s easy!</string>
    <string name="my_button">My button</string>
    <string name="text1">Нажата кнопка 1</string>
    <string name="text2">Нажата кнопка 2</string>
    <string name="text3">Нажата кнопка 3</string>
    <string name="click_any_button">Нажми любую кнопку</string>
    <string name="button_number_three">Кнопка номер 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_item1">Item1</string>
    <string name="action_item2">Item2</string>
    <string name="action_item3">Item3</string>
    <string name="mail">Mail</string>
    <string name="hide_group">Hide group</string>
    <string name="hide_menu_element">Hide menu element</string>
    <string name="show_group">Show menu group</string>
    <string name="show_menu_element">Show menu element</string>
    <string name="text_colour">Text colour</string>
    <string name="text_size">Text size</string>
    <string name="text">Text</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="go_to_activity_two">GO TO ACTIVITY TWO</string>
    <string name="this_is_activity_two">This is Activity Two</string>
    <string name="cl">CL</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="your_name_is">Your name is</string>
    <string name="input_name">Input name</string>
    <string name="color">Color</string>
    <string name="alignment">Alignment</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="web">web</string>
    <string name="map">map</string>
    <string name="call">call</string>
    <string name="save">save</string>
    <string name="load">load</string>
    <string name="email">Email</string>
    <string name="add">add</string>
    <string name="read">read</string>
    <string name="id">Id</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="countries">Countries</string>
    <string name="all">All</string>
    <string name="function">Function</string>
    <string name="population">Population</string>
    <string name="population_more_than"><![CDATA[Population >]]></string>
    <string name="population_by_regions">By reg</string>
    <string name="number">number</string>
    <string name="population_by_region_more_than"><![CDATA[By reg >]]></string>
    <string name="sort">Sort</string>
    <string name="region">Region</string>
    <string name="insert">Insert</string>
    <string name="insert_by_transaction">Insert by transaction</string>
    <string name="insert_by_transaction_with_statement">Insert by transaction with statement</string>
    <string name="layout_with_textview">Layout with TextView</string>
    <string name="staff_list">Staff list</string>
    <string name="textview">TextView</string>
    <string name="get_checked_items">Get checked items</string>
    <string name="add_entry">Add entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="img">img</string>
    <string name="basket">Basket</string>
    <string name="test">test</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
    <string name="exit">exit</string>
    <string name="save_data">Save data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved">Saved</string>
    <string name="items">items</string>
    <string name="adapter">adapter</string>
    <string name="cursor">cursor</string>
    <string name="infinity">Infinity</string>
    <string name="progress">Progress</string>
    <string name="main">Main</string>
    <string name="send">Send</string>
    <string name="second">Second</string>
    <string name="count">Count</string>
    <string name="write_file">Write file</string>
    <string name="read_file">Read file</string>
    <string name="write_file_to_sd">Write file to SDcard</string>
    <string name="read_file_from_sd">Read file from SDcard</string>
    <string name="text_tab1">This is first tab</string>
    <string name="text_tab2">This is second tab</string>
    <string name="text_tab3">This is third tab</string>
    <string name="text_tab_header">This is tab header</string>
    <string name="text_act1">This is first Activity</string>
    <string name="text_act2">This is second Activity</string>
    <string name="l078_text">Created from layoutInflater</string>
    <string name="l078_text2">This was created manually</string>
    <string name="start">Start</string>
    <string name="connect">Connect</string>
    <string name="download_files">Download files</string>
    <string name="details">Details</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="result">Result</string>
    <string name="cancelled">Cancelled</string>
    <string name="status">Status</string>
    <string name="startService">Start service</string>
    <string name="stopService">Stop service</string>
    <string name="task1">Task1</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="task1start">Task1 start</string>
    <string name="task2start">Task2 start</string>
    <string name="task3start">Task3 start</string>
    <string name="stop">Stop</string>
    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="error">Error</string>
    <string name="first">First</string>
    <string name="remove">Remove</string>
    <string name="replace">Replace</string>
    <string name="add_to_back_stack">Add to Back Stack</string>
    <string name="log">Log</string>
    <string name="find">Find</string>
    <string name="access_to_fragment_1_from_activity">Access to Fragment 1 from Activity</string>
    <string name="access_to_fragment_2_from_activity">Access to Fragment 2 from Activity</string>
    <string name="access_from_fragment_1">Access from Fragment1</string>
    <string name="action_bar_theme">ActionBarTheme</string>
    <string name="list">List</string>
    <string name="empty">Empty</string>
    <string name="text_of_your_message">Text of your message</string>
    <string name="maybe">Maybe</string>
    <string name="dialog1">Dialog1</string>
    <string name="dialog2">Dialog2</string>
    <string name="checkbox1">CheckBox 1</string>
    <string name="checkbox1_summary">Summary of CheckBox 1</string>
    <string name="edittext1_summary">Summary of EditText 1</string>
    <string name="edittext1">EditText 1</string>
    <string name="list1_summary">Summary of List 1</string>
    <string name="list1">List 1</string>
    <string name="checkbox2_summary">Summary of CheckBox 2</string>
    <string name="checkbox2">CheckBox 2</string>
    <string name="edittext2_summary">Summary of EditText 2</string>
    <string name="edittext2">EditText 2</string>
    <string name="list2_summary">Summary of List 2</string>
    <string name="list2">List 2</string>
    <string name="category1">Category 1</string>
    <string name="category2">Category 2</string>
    <string name="screen1_summary">Summary of Screen 1</string>
    <string name="screen1">Screen 1</string>
    <string name="screen2_summary">Summary of Screen 2</string>
    <string name="screen2">Screen 2</string>
    <string name="header1_summary">Summary of Header 1</string>
    <string name="header1">Header 1</string>
    <string name="header2_summary">Summary of Header 2</string>
    <string name="header2">Header 2</string>
    <string name="header3_summary">Summary of Header 3</string>
    <string name="header3">Header 3</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="item_31">Item 31</string>
    <string name="item_32">Item 32</string>
    <string name="add_delete">Add/Delete</string>
    <string name="show_hide">Show/Hide</string>
    <string name="fragment">Fragment</string>
    <string name="action_mode">Action mode</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="info">Info</string>
    <string name="widget">Widget</string>
    <string name="widget1">Widget1</string>
    <string name="config">Config</string>
    <string name="http">HTTP</string>
    <string name="stream">Stream</string>
    <string name="sd">SD</string>
    <string name="uri">Uri</string>
    <string name="raw">raw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="loop">Loop</string>
    <string name="backward">Backward</string>
    <string name="forward">Forward</string>
    <string name="play">Play</string>
    <string name="music">Music</string>
    <string name="sound_gain">Sound G</string>
    <string name="sound_gain_transient">Sound GT</string>
    <string name="sound_gain_transient_duck">Sound GTD</string>
    <string name="record">Record</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="start_read_record">Start read record</string>
    <string name="stop_read_record">Stop read record</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string-array name="names">
        <item>"Иван"</item>
        <item>"Мария"</item>
        <item>"Петр"</item>
        <item>"Антон"</item>
        <item>"Даша"</item>
        <item>"Борис"</item>
        <item>"Костя"</item>
        <item>"Игорь"</item>
        <item>"Анна"</item>
        <item>"Денис"</item>
        <item>"Вадим"</item>
        <item>"Ольга"</item>
        <item>"Сергей"</item>
    </string-array>
    <string-array name="entries">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="headers">
        <item>Header 1</item>
        <item>Header 2</item>
        <item>Header 3</item>
        <item>Header 4</item>
    </string-array>
    <string-array name="content">
        <item>Content 1</item>
        <item>Content 2</item>
        <item>Content 3</item>
        <item>Content 4</item>
    </string-array>
</resources>
