<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.test.hex.draftapp.numbered.L111PreferenceFragment1"
        android:icon="@android:drawable/ic_menu_call"
        android:summary="@string/header1_summary"
        android:title="@string/header1"/>
    <header
        android:fragment="com.test.hex.draftapp.numbered.L111PreferenceFragment2"
        android:icon="@android:drawable/ic_menu_info_details"
        android:summary="@string/header2_summary"
        android:title="@string/header2"/>
    <header
        android:icon="@android:drawable/ic_menu_view"
        android:summary="@string/header3_summary"
        android:title="@string/header3">
        <intent android:action="android.settings.DISPLAY_SETTINGS" />
    </header>
</preference-headers>