<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numbered.L126"
    android:padding="5dp"
    android:background="#ea4b4d56">
    <LinearLayout
        android:id="@+id/llLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnStartHttp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/http"
            android:textAllCaps="false"
            android:onClick="onClickStart"/>
        <Button
            android:id="@+id/btnStartStream"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/stream"
            android:textAllCaps="false"
            android:onClick="onClickStart"/>
        <Button
            android:id="@+id/btnStartSD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/sd"
            android:textAllCaps="false"
            android:onClick="onClickStart"/>
        <Button
            android:id="@+id/btnStartUri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/uri"
            android:textAllCaps="false"
            android:onClick="onClickStart"/>
        <Button
            android:id="@+id/btnStartRaw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/raw"
            android:textAllCaps="false"
            android:onClick="onClickStart"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/llLayout1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnResume"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:onClick="onClick"/>
        <CheckBox
            android:id="@+id/chbLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/llLayout2"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackward"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/backward"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnForward"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:onClick="onClick"/>
    </LinearLayout>

</RelativeLayout>