<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".numbered.L105"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace"
            android:textAllCaps="false"/>
        <CheckBox
            android:id="@+id/cbBackStack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_back_stack"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frCont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>